# WordleBot

./: README.md  bot.py  pyproject.toml
plugins/wordle/: __init__.py  draw.py  model.py
